--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Droid+Sans:wght@700&family=Hind&family=Source+Sans+Pro:wght@600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
+
+    body {
+        @apply bg-light text-text font-base;
+    }
+
     .modal {
         @apply fixed inset-0 bg-black bg-opacity-50 z-50 hidden items-center justify-center;
     }
